fixing the heading and the paragraph font size and letter spacing

--- a/main.scss
+++ b/main.scss
@@ -42,7 +42,7 @@ body {
     background: url("images/bg-pattern-desktop.svg") right/cover;
 
     .logo {
-      margin: 4rem 0;
+      margin: 6rem 0;
       width: 10rem;
     }
 
@@ -52,11 +52,11 @@ body {
 
     h1 {
       text-transform: uppercase;
-      letter-spacing: 11px;
+      letter-spacing: 16px;
       font-size: 4.5rem;
       font-weight: 600;
       line-height: 1.1;
-      margin: 5rem 0 1.5rem 0;
+      margin: 5rem 0 1.9rem 0;
 
       span {
         color: $desaturated-red;
@@ -65,9 +65,10 @@ body {
     }
 
     p {
-      line-height: 1.5;
+      font-size: 1.2rem;
+      line-height: 1.6;
       color: $desaturated-red;
-      margin: 1.5rem 0;
+      margin: 2.5rem 0;
     }
   }
 
